--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap');
+body{
+    animation:transition 0.75s;
+}
 .caraousel-caption::before{
     background-color: rgba(0, 0, 0, 2);
 }
@@ -74,7 +77,7 @@
   }
 .pengolahan{
     margin-left: 50px;
-    width: 1100px;
+    width: 90%;
     font-size: 20px;
     font-family: 'Alegreya Sans', sans-serif;
 }
@@ -130,5 +133,15 @@
     .pengantar{
         width: 95%;
         margin-left: 5px;
+    }
+}
+@keyframes transition{
+    from{
+        opacity: 0;
+        transform: rotateX(-10deg);
+    }
+    to{
+        opacity: 1;
+        transform: rotateX(0);
     }
 }
