--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ body{
         margin-left: 5px;
     }
     .pengantar{
+        font-size:20px
         width: 95%;
         margin-left: 5px;
     }
