--- a/style.css
+++ b/style.css
@@ -117,7 +117,6 @@ body{
     .two-column-list{
         font-size: 18px;
         margin-left: 0px;
-        list-style: none;
         column-count: 1;
     }
     .m img{
@@ -131,7 +130,7 @@ body{
         margin-left: 5px;
     }
     .pengantar{
-        font-size:20px
+        font-size:20px;
         width: 95%;
         margin-left: 5px;
     }
