--- a/style.css
+++ b/style.css
@@ -134,6 +134,9 @@ body{
         width: 95%;
         margin-left: 5px;
     }
+    .subjudul{
+        font-size:40px;
+    }
 }
 @keyframes transition{
     from{
