--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body{
   }
 .pengolahan{
     margin-left: 50px;
-    width: 90%;
+    width: 80%;
     font-size: 20px;
     font-family: 'Alegreya Sans', sans-serif;
 }
@@ -132,22 +132,24 @@ body{
     .two-column-list{
         font-size: 18px;
         margin-left: 0px;
-        list-style: none;
         column-count: 1;
     }
     .m img{
-        width: 300px;
+        width: 90%;
     }
     .pengolahan{
         width: 90%;
         margin-left: 25px;
     }
     .card{
-        margin-left: 5px;
+        margin-left: 0px;
     }
     .pengantar{
         width: 95%;
         margin-left: 5px;
+    }
+    .subjudul{
+        font-size: 20px;
     }
 }
 @keyframes transition{
