--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital@1&display=swap');
+
 ::-webkit-scrollbar {
     width: 10px;
 }
@@ -24,10 +28,6 @@ body{
 .d-block{
     width: 100%;
     height: 100vh;
-}
-.list{
-    list-style: none;
-    font-size: 20px;
 }
 .carousel-item img {
     filter: brightness(60%); /* Sesuaikan tingkat kegelapan yang diinginkan */
@@ -113,6 +113,46 @@ body{
 .m{
     display: flex; flex-direction: row; margin-left: 50px;
 }
+.reveal{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 1s all ease;
+  }
+  
+.reveal.active{
+    transform: translateY(0);
+    opacity: 1;
+}
+.fisik{
+    display: flex; 
+    flex-direction: row; 
+    margin-left: 50px;
+}
+.fisik h5, .fisik h6, .fisik p{
+    margin-left: 20px;
+}
+.fisik p{
+    width: 500px;
+}
+
+.p1{
+    font-size: 14px;
+    font-family: 'Roboto Slab', serif;
+}
+.list{
+    margin-left: 5px;
+    font-family: 'Rubik', sans-serif;
+    width: 70%;
+}
+.penjelasan2{
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 18px;
+}
+li{
+    display: flex;
+    flex-direction: row;
+}
 @media  screen and (max-width: 768px){
     .isi{
         margin-left: 2%;
@@ -151,6 +191,19 @@ body{
     .subjudul{
         font-size: 20px;
     }
+    .fisik{
+        flex-direction: column;
+        margin-left: 5px;
+    }
+    .pengawetan li{
+        flex-direction: column;
+    }
+    .pengawetan li .p1{
+        font-size: 16px;
+    }
+    .penjelasan2{
+        font-size: 15px;
+    }
 }
 @keyframes transition{
     from{
@@ -161,15 +214,4 @@ body{
         opacity: 1;
         transform: rotateX(0);
     }
-}
-.reveal{
-    position: relative;
-    transform: translateY(150px);
-    opacity: 0;
-    transition: 1s all ease;
-  }
-  
-.reveal.active{
-    transform: translateY(0);
-    opacity: 1;
 }
