--- a/style.css
+++ b/style.css
@@ -201,6 +201,9 @@ li{
     .pengawetan li .p1{
         font-size: 16px;
     }
+    .fisik img{
+        width: 90%
+    }
 }
 @keyframes transition{
     from{
