--- a/style.css
+++ b/style.css
@@ -145,8 +145,7 @@ body{
 .list2{
     font-size: 18px;
     text-align: center;
-    margin-left:50%;
-    margin-right:50%;
+    align-items:center;
 }
 .penjelasan2{
     font-family: 'Noto Sans', sans-serif;
