--- a/style.css
+++ b/style.css
@@ -145,7 +145,8 @@ body{
 .list2{
     font-size: 18px;
     text-align: center;
-    align-items:center;
+    align-items: center;
+    width:100%;
 }
 .penjelasan2{
     font-family: 'Noto Sans', sans-serif;
