--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-align: center;
+    text-align: left;
+    align-items:center;
     z-index: 1;
     color: white;
   }
