--- a/style.css
+++ b/style.css
@@ -34,8 +34,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-align: left;
-    align-items:center;
+    text-align: center;
     z-index: 1;
     color: white;
   }
@@ -48,6 +47,10 @@ body{
 .isi{
     margin-top: 50px;
     margin-left: 5%;
+}
+.list2{
+    text-align: center;
+    font-size: 20px;
 }
 .subjudul::before{
     content: "";
@@ -72,10 +75,10 @@ body{
 .penjelasan{
     display: flex;
     flex-direction: column;
-    width: 550px;
     margin-left: 10px;
     font-family: 'Alegreya Sans', sans-serif;
-    font-size: 23px;
+    font-size: 20px;
+    width: 60%;
 }
 .kandungan{
     font-size: 25px;
@@ -109,7 +112,7 @@ body{
     height: 130px;
 }
 .m{
-    display: flex; flex-direction: row;    m margin-left: 50px;
+    display: flex; flex-direction: row; margin-left: 50px;
 }
 .reveal{
     position: relative;
@@ -135,19 +138,13 @@ body{
 }
 
 .p1{
-    font-size: 18px;
+    font-size: 14px;
     font-family: 'Roboto Slab', serif;
-    text-align: center;
 }
 .list{
     margin-left: 5px;
     font-family: 'Rubik', sans-serif;
-}
-.list2{
-    font-size: 24px;
-    text-align: center;
-    align-items: center;
-    width:100%;
+    width: 70%;
 }
 .penjelasan2{
     font-family: 'Noto Sans', sans-serif;
@@ -156,6 +153,9 @@ body{
 li{
     display: flex;
     flex-direction: row;
+}
+.p1{
+    font-size: 17px;
 }
 @media  screen and (max-width: 768px){
     .isi{
@@ -166,9 +166,9 @@ li{
         margin-left: 10px;
     }
     .penjelasan{
-        font-size: 20px;
+        font-size: 18px;
         margin-left: 0;
-        width: 90%;
+        width: 85%;
     }
     .kandungan{
         margin-left:0px;
@@ -205,11 +205,8 @@ li{
     .pengawetan li .p1{
         font-size: 16px;
     }
-    .fisik img{
-        width: 85%
-    }
-    .slideshow-caption{
-        width:90%;
+    .penjelasan2{
+        font-size: 15px;
     }
 }
 @keyframes transition{
